[tool.poetry]
name = "query-api"
version = "0.1.0"
description = ""
authors = ["David Nowinsky <david.nowinsky@toucantoco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
psycopg = "^3.1.10"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
